src/objects/Endorsement__c.object
<CustomObject>
    <description>To store specialties / endorsements of a license (individual / business)</description>
    <fields>
        <fullName>Added_Through_AMR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added Through AMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application_BG</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_for_New_Application__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created for New Application</label>
        <type>Checkbox</type>
    </fields>
	<fields>
        <fullName>Current_Datetime__c</fullName>
        <description>Current datetime</description>
        <formula>NOW()</formula>
        <inlineHelpText>Current datetime</inlineHelpText>
        <label>Current Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>License_Printable_Name__c</fullName>
        <formula>License__r.License_Printable_Name__c</formula>
        <label>License Printable Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Granted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Granted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Removed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Removed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested_for_Adding_Endorsement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Requested_for_Removing_Endorsement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Requested for Removing Endorsement</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_After_Endorsement_Issue_Date_30__c</fullName>
        <formula>Effective_Date__c + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days After Endorsement Issue Date 30</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Today_30__c</fullName>
        <description>30 days from current date</description>
        <formula>today() + 30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>30 days from current date</inlineHelpText>
        <label>Days From Today 30</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electronic_Software_Provider__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Electronic Software Provider</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Endorsement_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Endorsement Id</label>
        <length>60</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Endorsement_Type__c</fullName>
        <label>Endorsement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Agricultural &amp; Biological</fullName>
                </value>
                <value>
                    <fullName>Both Engineering Geologist and Hydrogeologist</fullName>
                </value>
                <value>
                    <fullName>Building Systems</fullName>
                </value>
                <value>
                    <fullName>Cemetery Pre-arrangement Sales</fullName>
                </value>
                <value>
                    <fullName>Cemetery Pre-arrangement Sales Exemption</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Control Systems</fullName>
                </value>
                <value>
                    <fullName>Crematory</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Electronic Notary</fullName>
                </value>
                <value>
                    <fullName>Electronic Records Notary Public Endorsement</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Engineering Geologist</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Fire Protection</fullName>
                </value>
                <value>
                    <fullName>Funeral Pre-arrangement Contract</fullName>
                </value>
                <value>
                    <fullName>Hydrogeologist</fullName>
                </value>
                <value>
                    <fullName>Industrial</fullName>
                </value>
                <value>
                    <fullName>Land Surveying</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Metallurgical and Materials</fullName>
                </value>
                <value>
                    <fullName>Mining and Mineral Processing</fullName>
                </value>
                <value>
                    <fullName>Naval Architect/Marine</fullName>
                </value>
                <value>
                    <fullName>Nuclear</fullName>
                </value>
                <value>
                    <fullName>Petroleum</fullName>
                </value>
                <value>
                    <fullName>Structural Engineer</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Lic_Prog_Mailing_City_State_ZIP__c</fullName>
        <formula>License__r.Program_Mailing_City_State_ZIP__c</formula>
        <label>Lic Prog Mailing City State ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lic_Prog_Mailing_PO_Box__c</fullName>
        <formula>License__r.Program_Mailing_PO_Box__c</formula>
        <label>Lic Prog Mailing PO Box</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Applicant_Full_Name__c</fullName>
        <formula>License__r.Applicant_Full_Name__c</formula>
        <label>License Applicant Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Applicant__c</fullName>
        <formula>License__r.Applicant_Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Applicant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_ID__c</fullName>
        <description>Foreign Key for Data Migration of Legacy Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>License ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>License_Mailing_City__c</fullName>
        <formula>License__r.MUSW__Parcel__r.MUSW__City__c</formula>
        <label>License Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_State__c</fullName>
        <formula>Text(License__r.MUSW__Parcel__r.MUSW__State__c)</formula>
        <label>License Mailing State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_Street__c</fullName>
        <formula>License__r.MUSW__Parcel__r.MUSW__Street2__c</formula>
        <label>License Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Mailing_ZIP__c</fullName>
        <formula>License__r.MUSW__Parcel__r.Zip_Postal_Code__c</formula>
        <label>License Mailing ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Number__c</fullName>
        <formula>License__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Number</label>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>License_Program_Email__c</fullName>
        <formula>License__r.Program_Email__c</formula>
        <label>License Program Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Program_Phone__c</fullName>
        <formula>License__r.Program_Phone__c</formula>
        <label>License Program Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Program_Type__c</fullName>
        <formula>Text(License__r.Application_Type__c)</formula>
        <label>License Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Status__c</fullName>
        <formula>TEXT(License__r.MUSW__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>License Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
	<fields>
        <fullName>License_Ultimate_Parent_Account__c</fullName>
        <formula>License__r.Ultimate_Parent_Account__r.Name</formula>
        <label>License Ultimate Parent Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Licensee_Name__c</fullName>
        <formula>HYPERLINK( &apos;/lightning/r/Contact/&apos;&amp;  License__r.MUSW__Applicant__r.Id  &amp;&apos;/view&apos;,  License__r.MUSW__Applicant__r.FirstName &amp; &quot; &quot;&amp;License__r.MUSW__Applicant__r.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Type__c</fullName>
        <formula>TEXT(License__r.Application_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reinstatement_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal &amp; Reinstatement Application</label>
        <referenceTo>Renewal_Application__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Endorsements</relationshipLabel>
        <relationshipName>Endorsements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Add</fullName>
                </value>
                <value>
                    <fullName>Not Qualified</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending Remove</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Pending Action</fullName>
                </value>
                <value>
                    <fullName>In-Review</fullName>
                    <default>true</default>
                    <label>In-Review</label>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Status__c</fullName>
        <label>Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant Action</fullName>
                </value>
                <value>
                    <fullName>Third Party Action</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Endorsement</label>
    <nameField>
        <displayFormat>END-{0000000}</displayFormat>
        <label>Endorsement icon Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endorsements</pluralLabel>
    <recordTypes>
        <fullName>Endorsement</fullName>
        <active>true</active>
        <label>Endorsement</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>